--- a/google-k8s/back-deploy.yaml
+++ b/google-k8s/back-deploy.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: back
-          image: guoqiangqi/test-bot:0.55
+          image: guoqiangqi/label-bot:0.55
           ports:
             - containerPort: 8008
